--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,50 @@
         </androidx.appcompat.widget.AppCompatImageView>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
+    <LinearLayout
+        android:id="@+id/main_TopRightInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center_vertical">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/main_LBL_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Distance: 0"
+            android:textSize="20sp"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                app:srcCompat="@drawable/coin" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/main_LBL_coin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text=": 0"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
+
 
 
 
@@ -101,9 +145,10 @@
             android:textStyle="bold"
             android:textAllCaps="true"
             app:icon="@drawable/right_icon"
-            app:iconGravity="end"
-            tools:ignore="RelativeOverlap">
+            app:iconGravity="end" >
         </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
+
+
     </androidx.appcompat.widget.LinearLayoutCompat>
      <!-- Create 24 ImageViews for the 3x8 grid -->
 
@@ -114,7 +159,7 @@
         android:layout_above="@id/main_Arrows"
         android:layout_below="@id/main_Hearts"
         android:layout_margin="@dimen/default_margin"
-        android:columnCount="3"
+        android:columnCount="5"
         android:rowCount="8">
 
         <!-- Create 24 ImageViews for the 3x8 grid -->
@@ -149,6 +194,25 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:scaleType="fitCenter" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_0_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="0"
+            android:layout_column="3"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_0_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="0"
+            android:layout_column="4"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image_1_0"
@@ -176,6 +240,25 @@
             android:layout_height="0dp"
             android:layout_row="1"
             android:layout_column="2"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_1_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="1"
+            android:layout_column="3"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_1_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="1"
+            android:layout_column="4"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:scaleType="fitCenter" />
@@ -209,6 +292,25 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:scaleType="fitCenter" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_2_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="2"
+            android:layout_column="3"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_2_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="2"
+            android:layout_column="4"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image_3_0"
@@ -236,6 +338,25 @@
             android:layout_height="0dp"
             android:layout_row="3"
             android:layout_column="2"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_3_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="3"
+            android:layout_column="3"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_3_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="3"
+            android:layout_column="4"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:scaleType="fitCenter" />
@@ -269,6 +390,25 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:scaleType="fitCenter" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_4_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="4"
+            android:layout_column="3"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_4_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="4"
+            android:layout_column="4"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image_5_0"
@@ -299,6 +439,25 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:scaleType="fitCenter" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_5_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="5"
+            android:layout_column="3"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_5_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="5"
+            android:layout_column="4"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image_6_0"
@@ -326,6 +485,25 @@
             android:layout_height="0dp"
             android:layout_row="6"
             android:layout_column="2"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_6_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="6"
+            android:layout_column="3"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_6_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="6"
+            android:layout_column="4"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:scaleType="fitCenter" />
@@ -360,8 +538,29 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:scaleType="fitCenter" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_7_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="7"
+            android:layout_column="3"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_7_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="7"
+            android:layout_column="4"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:scaleType="fitCenter" />
 
 
 
     </com.google.android.material.circularreveal.CircularRevealGridLayout>
+
+
 </RelativeLayout>
